# spectre

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  references.bib
.github/workflows/: ci.yml
audio/: sine_sweep.csd
src/: FFTAnalyzer.c  FFTAnalyzer.h  LinearSpectrogram.c  LinearSpectrogram.h  LockFreeQueue.c  LockFreeQueue.h  RMSAnalyzer.c  RMSAnalyzer.h  RMSVisualizer.c  RMSVisualizer.h  audio_callback.c  audio_callback.h  definitions.h  g_spsc_ring_buffer.c  g_spsc_ring_buffer.h  load.c  load.h  main.c  platform_check.h
src/colormap/: cividis.inc  colormap.c  colormap.h  dump_cmap.py  inferno.inc  magma.inc  palette.h  plasma.inc  viridis.inc
src/common/: definitions.h
src/core/: History.c  History.h  LockFreeQueue.h  README.md  intensity.c  intensity.h  platform_check.h
src/core/colormap/: colormap.c  dump_cmap.py  magma.inc  viridis.inc
src/dsp/: filters.c  filters.h  window.c  window.h
src/window/: window.h
test/: CMakeLists.txt
test/dsp/: CMakeLists.txt  test_dsp.c
test/dump/: CMakeLists.txt  README.md  dump.c
